--- a/tex/conclusion.tex
+++ b/tex/conclusion.tex
@@ -1,31 +1,30 @@
 \chapter{Conclusions and Outlook}
 \label{sec:conclusion}
 
-Measurements of the asymmetry in the production of top quark pairs at
-the ATLAS experiment have been performed, using a dataset
-corresponding to an integrated luminosity of $4.7 \ifb{}$ taken over
-the course of 2011 at a centre-of-mass energy \seventev{} and a
-dataset corresponding to an integrated luminosity of $20 \ifb{}$
-taken over the course of 2012 at a centre-of-mass energy \eighttev{}.
+Measurements of the charge asymmetry in the production of top quark pairs at
+the ATLAS experiment have been performed using $pp$ collision data at 
+center--of--mass energies of \seventev{} and \eighttev{}, and corresponding
+to integrated luminosities of $4.7 \ifb{}$ and $20 \ifb{}$, respectively.
 This represents the full dataset collected by ATLAS over the course of
 LHC \mbox{Run 1}.
 
 The lepton+jets signature of the semileptonic \ttbar{} decay has been
 exploited to select samples enriched in \ttbar{} events by identifying
-and reconstructing one isolated lepton with large transverse momentum,
+one isolated lepton with large transverse momentum,
 at least four jets and a large missing transverse momentum.
 The background contamination of the sample has been studied and
-data-driven techniques have been developed to precisely determine its
+data--driven techniques have been developed to precisely determine its
 composition. In particular, the normalization of the different
 $W$+heavy--flavor processes has been determined in--situ exploiting
-the intrinsic charge asymmetry in $W$ production at LHC. 
+the intrinsic charge asymmetry in $W$ boson production at LHC. 
 Other background processes, such
 as single top, Z+jets and diboson production have been estimated with
 Monte Carlo simulations, while QCD multijet events have been modeled
-with well established data-driven techniques.
-The four momenta of the \ttbar{} pair has been reconstructed
-event--by--event with a kinematic fit of the measured objects. The
-inclusive and differential distribution of the difference of absolute
+with well--established data--driven techniques.
+The four--momenta of the \ttbar{} pair have been estimated
+event--by--event by performing a kinematic fit under \ttbar{} hypothesis 
+using the reconstructed physics objects. 
+The distribution of the difference of absolute
 rapidities of the reconstructed top and antitop quarks, \dy{}, has then been
 measured in data and estimated for the backgrounds.
 A novel unfolding procedure, based on a bayesian inference approach, has
@@ -34,21 +33,16 @@ distribution, and the corresponding asymmetries, at the parton--level,
 accounting for the distortions induced by acceptance and
 resolution effects.
 The procedure has been calibrated with the goal of obtaining the most
-precise and accurate achievable asymmetry measurement, by studying the
-response in distributions for which the corresponding parton--level
-asymmetry is known.
+precise and accurate achievable asymmetry measurement, by comparing the
+unfolded and parton--level asymmetries in dedicated simulated samples.
 
 In the \seventev{} dataset, the asymmetry \ac{} has been measured
-inclusively and differentially as a function of \mtt{}, \pttt{} and \ytt{}, and has been found
-to be compatible with the SM predictions in all cases. The inclusive
-measurement and the one as a function of \mtt{} have also been performed in
-a $\qqbar{}\to\ttbar{}$ enriched sample ($\betatt{}>0.6$), yielding
-SM--compatible results as well. The precision of both inclusive and
-differential measurements is limited by the statistical uncertainty,
-while the largest systematic uncertainties are the ones with a large
-impact on the acceptance for asymmetric backgrounds (\wjets{} and
-single top production), such as the uncertainty on the energy scale and
-resolution of jets and leptons.
+inclusively and differentially as a function of \mtt{}, \pttt{} and $|\ytt{}|$, and has been found
+to be compatible with the SM predictions in all cases. 
+Measurements of the asymmmetry have also been performed in a sample enriched in 
+the $\qqbar{}\to\ttbar{}$ process (via a requirement $\betatt{}>0.6$), both
+inclusively and differentially as a function of \mtt{}, yielding
+results compatible with the SM predictions as well. 
 In the \eighttev{} dataset, the asymmetry \ac{} has been measured
 inclusively and differentially as a function of \mtt{}; in both cases the results are
 compatible with the SM predictions. The set of measurements will be
@@ -57,26 +51,34 @@ measurement as a function of \pttt{} and measurements in the
 \qqbar{}--enriched sample with $\betatt{}>0.6$.
 Both sets of measurements are the most precise to date at the LHC,
 reaching an absolute precision of 0.6\% in the case of the inclusive measurement
-at \eighttev{}. The high precision is necessary in order to have
+at \eighttev{}. In all cases the precision achieved is limited by the statistical 
+uncertainty, with the largest systematic uncertainties being those that significantly
+impact the acceptance for asymmetric backgrounds (\wjets{} and
+single top production), such as the uncertainties on the energy scale and
+resolution of jets.
+The goal of high experimental precision is justified by the need to achieve
 sensitivity to the small deviations expected from new physics effects.
-At this stage the asymmetry measurements at LHC do not show
+Currently, the asymmetry measurements at LHC do not show
 significant deviations from the SM predictions, although they are also
 consistent with new physics scenarios that explain the Tevatron
-anomaly and the SM--like \ac{} measurements at the LHC.
+anomaly and \ac{} measurements at the LHC close to the SM prediction.
 
 The precision of these measurements will be critical to significantly
 constrain possible models of new physics that would be consistent with
-the excess at the Tevatron and the lack of a significant deviation at
-the LHC. A combination of ATLAS and CMS results has been performed at
-\seventev{}, where this measurement drives the overall precision. A
-combination of measurements from ATLAS and CMS is also foreseen for
-the results at \eighttev{}.
+the current experimental measurements at the Tevatron and the LHC. 
+A combination of ATLAS and CMS results has been performed at
+\seventev{}, while a combination of results at \eighttev{} is also planned.
+In both cases the measurements described in this dissertation would play
+a significant role, driving the overall precision of the combined result.
 
-Despite the fact that the Tevatron excess is less significant, there
-are good reasons to measure the asymmetry at the LHC in order to
-settle this experimental puzzle. Even if the Tevatron excess is not
-real, the LHC is probing a new kinematic regime where new physics
-could manifest itself with effects on \ttbar{} production.
+Despite the fact that the Tevatron excess is less significant then it used to be, 
+there are good reasons to continue to perform precision measurements of the 
+asymmetry at the LHC. First and foremost, these measurements are needed in order
+to settle the experimental puzzle of the Tevatron measurements. But even 
+if the Tevatron anomaly largely disapperars following the availability of higher-order
+theoretical predictions, the LHC is probing a new kinematic regime where new physics,
+beyond the Tevatron reach, could manifest itself with effects such as asymmetric 
+\ttbar{} production
 
 Due to the different initial state and subsequently different
 asymmetry definitions, a direct comparison with the anomaly reported
@@ -84,9 +86,10 @@ at Tevatron cannot be performed. One important step would be to
 simultaneously measure the dependence of the asymmetries on the
 \ttbar{} invariant mass \mtt{} and velocity \betatt{}, in order to
 extrapolate the 'collider-independent' asymmetries $A_u$ and
-$A_d$~\cite{AguilarSaavedra:2012va}. This measurement is quite
-demanding from the experimental side, since it requires a
-3--dimensional unfolding in \mtt{}, \betatt{} and \dy{}. But it offers
+$A_d$~\cite{AguilarSaavedra:2012va}, corresponding to the partonic
+processes $u\bar{u}\to\ttbar{}$ and $d\bar{d}\to\ttbar{}$, respectively. 
+This measurement is quite demanding from the experimental side, since it requires a
+three--dimensional unfolding in \mtt{}, \betatt{} and \dy{}. But it offers
 a unique possibility of testing at LHC the same quantities that are at
 the origin of the Tevatron \afb{}.
 The experimental strategy used for this analysis, including the
@@ -95,20 +98,23 @@ the analysis, although detailed studies still need to be performed.
 
 Measuring the asymmetry \ac{} as an effective probe for new physics in
 future LHC datasets will become more challenging. Proton collisions
-will be delivered at higher center-of-mass energy -- $13\TeV{}$ in
+will be delivered at higher center--of--mass energy -- $13\TeV{}$ in
 2015 -- thus making the fraction of $\qqbar{}\to\ttbar{}$ events even
-smaller. Beside enhancing the \qqbar{} fraction by requiring a large
-$z$--component of the \ttbar{} velocity, a promising approach is to
+smaller. Besides enhancing the \qqbar{} fraction by requiring a large
+$z$--component of the \ttbar{} velocity, a promising approach would be to
 study the asymmetry in \ttbar{} events produced in association with
-photons~\cite{Aguilar-Saavedra:2014vta}. 
+photons~\cite{Aguilar-Saavedra:2014vta}.
 In fact, the SM--like \ac{} at the LHC could be the result of an accidental
 cancellation of asymmetries of different sign for $\uubar\to\ttbar$
 and $\ddbar\to\ttbar$, and the $\ttbar{}\gamma$ signature would allow
-to break such cancellation, but requires a high integrated luminosity.
+to break such cancellation, but requires a high integrated luminosity,
+as anticipated during the LHC \mbox{Run 2}.
 
-The strategies and techniques developed in this dissertation would prove
+To conclude, beyond the intrinsic interest of the program of precision
+measurements of the charge asymmetry in \ttbar{} production at the LHC,
+the strategies and techniques developed in this dissertation should prove
 valuable in the next round of new physics searches and precision
 measurements in the top quark sector at the LHC \mbox{Run 2}.
 Whether or not these measurements reveal new physics effects, they
-will contribute in a significant way to advance our understanding on
+will hopefully contribute in a significant way to advance our understanding on
 how Nature operates at its most fundamental level.
